fix website address

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://moutro.github.io/react-dicegame",
+  "homepage": "https://moutro.github.io/react-dicegame",
   "name": "dice",
   "version": "0.1.0",
   "private": true,
