Create React app called dice change from react-dicegame

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://moutro.github.io/react-dicegame",
+  "homepage": "https://moutro.github.io/dice",
   "name": "dice",
   "version": "0.1.0",
   "private": true,
